RESOLVED FIXED268233
WebCore::FontPlatformData::Attributes::m_options is uninitialized
https://bugs.webkit.org/show_bug.cgi?id=268233
Summary WebCore::FontPlatformData::Attributes::m_options is uninitialized
David Kilzer (:ddkilzer)
Reported 2024-01-27 14:48:22 PST
WebCore::FontPlatformData::Attributes::m_options is uninitialized. Regressed with: Make RemoteRenderingData::cacheFont reconstruct a Font using Attributes, and a reference to FontCustomPlatformData. https://bugs.webkit.org/show_bug.cgi?id=254490 <rdar://106965215> https://commits.webkit.org/262435@main
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-27 14:48:40 PST
David Kilzer (:ddkilzer)
Comment 2 2024-01-27 14:54:05 PST
EWS
Comment 3 2024-01-29 09:06:37 PST
Committed 273660@main (bc8fb461aa56): <https://commits.webkit.org/273660@main> Reviewed commits have been landed. Closing PR #23366 and removing active labels.
David Kilzer (:ddkilzer)
Comment 4 2024-05-24 09:28:27 PDT
David Kilzer (:ddkilzer)
Comment 5 2024-05-24 11:29:27 PDT
Committed 279281@main (8ffa747): https://commits.webkit.org/279281@main Reviewed commits have been landed. Closing PR #29058 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.