WebCore::FontPlatformData::Attributes::m_options is uninitialized https://bugs.webkit.org/show_bug.cgi?id=268233 <rdar://121753752>

Reviewed by Matt Woodrow.

* Source/WebCore/platform/graphics/FontPlatformData.h:
- Initialize m_options.  There is currently is no "None" enum, so we
  cast 0.  Fix tracked by <rdar://121670125>

Canonical link: https://commits.webkit.org/273660@main